<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="weplay">WePlay</string>
    <string name="show_games">Mostrar partidos</string>
    <string name="configuration">Configuración</string>
    <string name="share_app">Compartir app</string>
    <string name="share_app_phrase">¡Juega con WePlay!</string>
    <string name="overflow">Más</string>
    <string name="menu_option_home">Inicio</string>
    <string name="menu_option_recommended">Te recomendamos los siguientes partidos:</string>
    <string name="menu_option_myinfo">Mis Datos</string>
    <string name="menu_option_mygames">Mis Partidos</string>
    <string name="menu_option_show_game">Ver Partido</string>
    <string name="menu_option_mysports">Mis Deportes</string>
    <string name="menu_option_mymessages">Mis Mensajes</string>
    <string name="menu_option_logout">Salir</string>
    <string name="menu_option_showgames">Partidos</string>
    <string name="menu_option_configuration">Configuración</string>
    <string name="navigation_drawer_open">Abrir menú lateral</string>
    <string name="navigation_drawer_close">Cerrar menú lateral</string>
    <string name="loading_my_info_info">Cargando datos</string>
    <string name="loading_my_info_location">Cargando localización</string>
    <string name="loading_game">Cargando partido</string>
    <string name="error_loading">Lo siento, no ha sido posible cargar sus datos.</string>
    <string name="error_loading_game">Lo siento, no ha sido posible cargar el partido.</string>
    <string name="found_games_init">Se han encontrado</string>
    <string name="found_games_end">partidos.</string>
    <string name="not_found_games">No se han encontrado partidos que se ajusten a tus características.</string>

    <!-- my games -->
    <string name="my_games_tab_playing">Jugando </string>
    <string name="my_games_tab_played">Jugados</string>
    <string name="my_games_tab_organized">Organizados</string>

    <!-- my info -->
    <string name="my_info_tab_info">Datos</string>
    <string name="my_info_tab_location">Localización</string>
    <string name="my_info_tab_password">Contraseña</string>
    <string name="my_info_info_username">Nickname</string>
    <string name="my_info_info_name">Nombre</string>
    <string name="my_info_info_email">Email</string>
    <string name="my_info_info_birthday">Fecha de Nacimiento</string>
    <string name="my_info_location_address">Dirección</string>
    <string name="my_info_location_community">Comunidad Autónoma</string>
    <string name="my_info_location_province">Provincia</string>
    <string name="my_info_location_city">Ciudad</string>
    <string name="my_info_password_old">Antigua Contraseña</string>
    <string name="my_info_password_new">Nueva Contraseña</string>
    <string name="my_info_password_repeat">Repite Contraseña</string>
    <string name="my_info_save_changes">Guardar Cambios</string>

    <!-- game -->
    <string name="game_vacancies">Plazas: </string>
    <string name="game_where">¿Dónde jugamos?</string>
    <string name="game_price">Precio: </string>
    <string name="game_unsuscribe_limit">Límite de Baja: </string>
    <string name="game_how_to_go">Cómo llego</string>

</resources>